// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuStyled should render HomeIcon 1`] = `
.c0 {
  fill: #e2ac4a;
  width: 24px;
  height: 24px;
  padding-right: 24px;
}

<jest-stub
  className="c0"
/>
`;

exports[`MenuStyled should render Link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: inherit;
  font-size: 14px;
  line-height: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 16px;
}

<Link
  active={true}
  className="c0"
  replace={false}
/>
`;

exports[`MenuStyled should render Nav 1`] = `
.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<ul
  className="c0"
/>
`;

exports[`MenuStyled should render NavItem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #616162;
  background-color: rgba(0,0,0,.05);
  border-radius: 2px;
  color: #212121;
  font-weight: bold;
}

.c0:hover {
  background-color: rgba(0,0,0,.03);
  border-radius: 2px;
  color: #212121;
}

.c0:hover {
  background-color: rgba(0,0,0,.05);
}

<li
  className="c0"
/>
`;

exports[`MenuStyled should render NavMenu 1`] = `
.c0 {
  width: 232px;
  min-width: 232px;
  height: 100%;
}

<nav
  className="c0"
/>
`;

exports[`MenuStyled should render TagIcon 1`] = `
.c0 {
  fill: #55bf20;
  width: 24px;
  height: 24px;
  padding-right: 24px;
}

<jest-stub
  className="c0"
/>
`;

exports[`MenuStyled should render TaskIcon 1`] = `
.c0 {
  fill: #4285f4;
  width: 24px;
  height: 24px;
  padding-right: 24px;
}

<jest-stub
  className="c0"
/>
`;
